# UPZP-GameProcess

./: .gitignore  CMakeLists.txt  UPZP-GameProcess.sln  readme.md
Networking-Test/: Networking-Test.vcxproj  main.cpp  test_data_generated.h
UPZP-GameProcess/: Client.cpp  FindMySQL.cmake  UPZP-GameProcess.vcxproj  UPZP-GameProcess.vcxproj.filters  client.cpp  client.h  client_communication.cpp  client_communication.h  client_udp.cpp  client_udp.h  connection.fbs  datagram.cpp  datagram.h  game_status.fbs  game_status_generated.h  main.cpp  player_input.fbs  player_input.h  player_input_generated.h  sub_process_settings.cpp  udp_communication_mocker.cpp  udp_communication_mocker.h  vehicle_types.h
UPZP-GameProcess/client_communication/: client_communication.cpp  client_udp.cpp
UPZP-GameProcess/client_communication/inc/: client_communication.h  client_udp.h
UPZP-GameProcess/datagram/: datagram.cpp  datagram_stream.cpp
UPZP-GameProcess/datagram/inc/: datagram.h  datagram_stream.h
UPZP-GameProcess/game_logic/: game.cpp  game_logic.cpp  player.cpp  team.cpp
UPZP-GameProcess/game_logic/inc/: Team.h  coordinates.h  game.h  game_logic.h  player.h  point_box.h
UPZP-GameProcess/inc/: connection_generated.h  game_ended_generated.h  game_generated.h  game_id_generated.h  game_status_generated.h  maps.h  player_input.h  sub_process_settings.h  vehicle_types.h
UPZP-GameProcess/main_process_comm/: main_process_comm.cpp
UPZP-GameProcess/main_process_comm/inc/: main_process_comm.h
UPZP-GameProcess/mainproc_communication/: mainproc_communication.cpp  mainproc_tcp.cpp
UPZP-GameProcess/mainproc_communication/inc/: mainproc_communication.h  mainproc_tcp.h
client_communication_mocker/: client_communication_mocker.vcxproj  client_communication_mocker.vcxproj.filters  datagram.cpp  game_status_generated.h  main.cpp  udp_communication_mocker.cpp
client_communication_mocker/inc/: udp_communication_mocker.h
flatbuffers/: flatbuffers.lib  game.fbs  game_ended.fbs  game_id.fbs  game_status.fbs
main_process_communication_mocker/: main.cpp  tcp_communication_mocker.cpp
main_process_communication_mocker/inc/: tcp_communication_mocker.h
